scripts/nullness/annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8.txt
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:23: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:25: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:128: error: cannot find symbol
	@Initializer private void fase3() {
	 ^
  symbol:   class Initializer
  location: class Generador
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/CrucePMX.java:82: error: cannot find symbol
	@Initializer public IndividuoCombinatorio[] cruce(IndividuoCombinatorio madre,
	 ^
  symbol:   class Initializer
  location: class CrucePMX
Note: ../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
